cluster/apps/storage/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/auth-type: basic
    traefik.ingress.kubernetes.io/ssl-redirect: 'false'
    traefik.ingress.kubernetes.io/auth-secret: basic-auth
    traefik.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    traefik.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.k3s.ravenholm.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: longhorn-certificate-secret
